dashboard header fixed

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -14,7 +14,7 @@
 {% block content %}
   <!-- Header -->
   <header id="header">
-    <h1 style="font-family: 'Playfair Display', serif;">Dashboard</h1>
+    <h1 class= "dashboardheader ">Dashboard</h1>
   </header>
 
   <!-- Quick Insight Cards -->
