--- a/app/templates/myservices.html
+++ b/app/templates/myservices.html
@@ -27,7 +27,7 @@
           {{ form.hidden_tag() }}
           <div class="modal-header">
             <h5 class="modal-title" id="ModalLabel">Create a Service</h5>
-            <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
@@ -52,7 +52,7 @@
           </div>
 
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             <button type="submit" class="btn btn-primary">Add Service</button>
           </div>
         </form>
