--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -18,14 +18,14 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-light">
   <div class="container">
-      <a class="navbar-brand" href="#">Loyals</a>
+      <a class="navbar-brand" href="{{ url_for('main.index') }}">Loyals</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
           <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li><a class="nav-link" href="{{ url_for('main.contact') }}">Help</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
+              <li class="nav-item"><a class="nav-link" href="{{ url_for('main.pricing') }}">Pricing</a></li>
               <li class="nav-item"><a class="nav-link" href="{{ url_for('auth.login') }}">Login</a></li>
               <li class="nav-item"><a class="btn btn-outline-light fw-bold" href="{{ url_for('auth.register') }}">Create an Account</a></li>
           </ul>
