--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -1,7 +1,7 @@
 #header h1 {
-    margin-top: auto;
     font-size: 40px;
     text-align: center !important;
+    color: #7c4d25;
   }
 
   #content {
@@ -43,7 +43,7 @@
     margin-top: -60px;
     font-family: 'Playfair Display', serif;
     scale: 1.2;
-    color: #D6B7A1; /* Light Gold */
+    color: #7c4d25; /* Light Gold */
     text-transform: uppercase;
     letter-spacing: 1px;
   }
@@ -97,8 +97,8 @@
 }
 
 .btn-create-service, .btn-primary {
-  background-color: #C19A6B;
-  border: #C19A6B;
+  background-color: #7c4d25;
+  border: #7c4d25;
   width: 100%;
   font-size: 17px;
   font-style: italic;
