--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -14,10 +14,10 @@
 {% block content %}
   <!-- Header -->
   <header id="header">
-    <h1 class= "dashboardheader ">Dashboard</h1>
+    <h1 class="dashboardheader">Dashboard</h1>
   </header>
 
-  <!-- Quick Insight Cards -->
+  <!-- Quick Insight Cards 
   <div class="row ms-5 me-5 mt-5" id="containerQuickInsight">
     <div class="col-md-4 mb-4">
       <div class="card insight-card">
@@ -44,6 +44,7 @@
       </div>
     </div>
   </div>
+  -->
   <!-- Main Calendar & Availability -->
   <div id="main" class="ms-5 me-5">
     <div class="d-flex justify-content-between align-items-center mb-4">
