--- a/app/templates/loyaltycard.html
+++ b/app/templates/loyaltycard.html
@@ -11,11 +11,16 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #f8f9fa;
+            margin-top: -50px;
         }
 
         .container {
             max-width: 900px;
             margin-top: 30px;
+        }
+
+        .container h1 {
+            font-size: 45px;
         }
 
         .loyalty-card {
